# nvidia-open

./: meson.build  meson.options
kernel-open/common/inc/: cpuopsys.h
managarm-open/: shader-ld.sh
src/: meson.build
src/common/sdk/nvidia/inc/: cpuopsys.h
src/nvidia/: meson.build
src/nvidia-modeset/: meson.build
src/nvidia-modeset/os-interface/include/: nvidia-modeset-os-interface.h  nvkms.h
src/nvidia-modeset/src/shaders/: meson.build
src/nvidia/arch/nvalloc/unix/include/: nv-ioctl-numa.h  nv.h
src/nvidia/arch/nvalloc/unix/src/: os.c  osinit.c
src/nvidia/arch/nvalloc/unix/src/asm/x86/: nv_rdcr.c
src/nvidia/src/kernel/gpu/mem_mgr/: mem_mgr.c
