modeset_src = files(
	'../common/shared/nvstatus/nvstatus.c',
	'../common/softfloat/source/8086-SSE/s_commonNaNToF16UI.c',
	'../common/softfloat/source/8086-SSE/s_commonNaNToF32UI.c',
	'../common/softfloat/source/8086-SSE/s_commonNaNToF64UI.c',
	'../common/softfloat/source/8086-SSE/s_f16UIToCommonNaN.c',
	'../common/softfloat/source/8086-SSE/s_f32UIToCommonNaN.c',
	'../common/softfloat/source/8086-SSE/s_f64UIToCommonNaN.c',
	'../common/softfloat/source/8086-SSE/s_propagateNaNF32UI.c',
	'../common/softfloat/source/8086-SSE/s_propagateNaNF64UI.c',
	'../common/softfloat/source/8086-SSE/softfloat_raiseFlags.c',
	'../common/softfloat/source/f16_to_f32.c',
	'../common/softfloat/source/f32_add.c',
	'../common/softfloat/source/f32_div.c',
	'../common/softfloat/source/f32_eq.c',
	'../common/softfloat/source/f32_eq_signaling.c',
	'../common/softfloat/source/f32_isSignalingNaN.c',
	'../common/softfloat/source/f32_le.c',
	'../common/softfloat/source/f32_le_quiet.c',
	'../common/softfloat/source/f32_lt.c',
	'../common/softfloat/source/f32_lt_quiet.c',
	'../common/softfloat/source/f32_mul.c',
	'../common/softfloat/source/f32_mulAdd.c',
	'../common/softfloat/source/f32_rem.c',
	'../common/softfloat/source/f32_roundToInt.c',
	'../common/softfloat/source/f32_sqrt.c',
	'../common/softfloat/source/f32_sub.c',
	'../common/softfloat/source/f32_to_f16.c',
	'../common/softfloat/source/f32_to_f64.c',
	'../common/softfloat/source/f32_to_i32.c',
	'../common/softfloat/source/f32_to_i32_r_minMag.c',
	'../common/softfloat/source/f32_to_i64.c',
	'../common/softfloat/source/f32_to_i64_r_minMag.c',
	'../common/softfloat/source/f32_to_ui32.c',
	'../common/softfloat/source/f32_to_ui32_r_minMag.c',
	'../common/softfloat/source/f32_to_ui64.c',
	'../common/softfloat/source/f32_to_ui64_r_minMag.c',
	'../common/softfloat/source/f64_add.c',
	'../common/softfloat/source/f64_div.c',
	'../common/softfloat/source/f64_eq.c',
	'../common/softfloat/source/f64_eq_signaling.c',
	'../common/softfloat/source/f64_isSignalingNaN.c',
	'../common/softfloat/source/f64_le.c',
	'../common/softfloat/source/f64_le_quiet.c',
	'../common/softfloat/source/f64_lt.c',
	'../common/softfloat/source/f64_lt_quiet.c',
	'../common/softfloat/source/f64_mul.c',
	'../common/softfloat/source/f64_mulAdd.c',
	'../common/softfloat/source/f64_rem.c',
	'../common/softfloat/source/f64_roundToInt.c',
	'../common/softfloat/source/f64_sqrt.c',
	'../common/softfloat/source/f64_sub.c',
	'../common/softfloat/source/f64_to_f32.c',
	'../common/softfloat/source/f64_to_i32.c',
	'../common/softfloat/source/f64_to_i32_r_minMag.c',
	'../common/softfloat/source/f64_to_i64.c',
	'../common/softfloat/source/f64_to_i64_r_minMag.c',
	'../common/softfloat/source/f64_to_ui32.c',
	'../common/softfloat/source/f64_to_ui32_r_minMag.c',
	'../common/softfloat/source/f64_to_ui64.c',
	'../common/softfloat/source/f64_to_ui64_r_minMag.c',
	'../common/softfloat/source/i32_to_f32.c',
	'../common/softfloat/source/i32_to_f64.c',
	'../common/softfloat/source/i64_to_f32.c',
	'../common/softfloat/source/i64_to_f64.c',
	'../common/softfloat/source/s_addMagsF32.c',
	'../common/softfloat/source/s_addMagsF64.c',
	'../common/softfloat/source/s_approxRecipSqrt32_1.c',
	'../common/softfloat/source/s_approxRecipSqrt_1Ks.c',
	'../common/softfloat/source/s_countLeadingZeros64.c',
	'../common/softfloat/source/s_countLeadingZeros8.c',
	'../common/softfloat/source/s_mul64To128.c',
	'../common/softfloat/source/s_mulAddF32.c',
	'../common/softfloat/source/s_mulAddF64.c',
	'../common/softfloat/source/s_normRoundPackToF32.c',
	'../common/softfloat/source/s_normRoundPackToF64.c',
	'../common/softfloat/source/s_normSubnormalF16Sig.c',
	'../common/softfloat/source/s_normSubnormalF32Sig.c',
	'../common/softfloat/source/s_normSubnormalF64Sig.c',
	'../common/softfloat/source/s_roundPackToF16.c',
	'../common/softfloat/source/s_roundPackToF32.c',
	'../common/softfloat/source/s_roundPackToF64.c',
	'../common/softfloat/source/s_roundToI32.c',
	'../common/softfloat/source/s_roundToI64.c',
	'../common/softfloat/source/s_roundToUI32.c',
	'../common/softfloat/source/s_roundToUI64.c',
	'../common/softfloat/source/s_shiftRightJam128.c',
	'../common/softfloat/source/s_subMagsF32.c',
	'../common/softfloat/source/s_subMagsF64.c',
	'../common/softfloat/source/softfloat_state.c',
	'../common/softfloat/source/ui32_to_f32.c',
	'../common/softfloat/source/ui32_to_f64.c',
	'../common/softfloat/source/ui64_to_f32.c',
	'../common/softfloat/source/ui64_to_f64.c',
	'../common/src/nv_smg.c',
	'../common/displayport/src/dp_auxretry.cpp',
	'../common/displayport/src/dp_bitstream.cpp',
	'../common/displayport/src/dp_buffer.cpp',
	'../common/displayport/src/dp_configcaps.cpp',
	'../common/displayport/src/dp_configcaps2x.cpp',
	'../common/displayport/src/dp_connectorimpl.cpp',
	'../common/displayport/src/dp_connectorimpl2x.cpp',
	'../common/displayport/src/dp_crc.cpp',
	'../common/displayport/src/dp_deviceimpl.cpp',
	'../common/displayport/src/dp_discovery.cpp',
	'../common/displayport/src/dp_edid.cpp',
	'../common/displayport/src/dp_evoadapter.cpp',
	'../common/displayport/src/dp_evoadapter2x.cpp',
	'../common/displayport/src/dp_groupimpl.cpp',
	'../common/displayport/src/dp_guid.cpp',
	'../common/displayport/src/dp_linkconfig.cpp',
	'../common/displayport/src/dp_list.cpp',
	'../common/displayport/src/dp_merger.cpp',
	'../common/displayport/src/dp_messagecodings.cpp',
	'../common/displayport/src/dp_messageheader.cpp',
	'../common/displayport/src/dp_messages.cpp',
	'../common/displayport/src/dp_mst_edid.cpp',
	'../common/displayport/src/dp_splitter.cpp',
	'../common/displayport/src/dp_sst_edid.cpp',
	'../common/displayport/src/dp_timer.cpp',
	'../common/displayport/src/dp_vrr.cpp',
	'../common/displayport/src/dp_wardatabase.cpp',
	'../common/displayport/src/dp_watermark.cpp',
	'../common/displayport/src/dptestutil/dp_testmessage.cpp',
	'../common/modeset/hdmipacket/nvhdmipkt.c',
	'../common/modeset/hdmipacket/nvhdmipkt_0073.c',
	'../common/modeset/hdmipacket/nvhdmipkt_9171.c',
	'../common/modeset/hdmipacket/nvhdmipkt_9271.c',
	'../common/modeset/hdmipacket/nvhdmipkt_9471.c',
	'../common/modeset/hdmipacket/nvhdmipkt_9571.c',
	'../common/modeset/hdmipacket/nvhdmipkt_C371.c',
	'../common/modeset/hdmipacket/nvhdmipkt_C671.c',
	'../common/modeset/hdmipacket/nvhdmipkt_C771.c',
	'../common/modeset/hdmipacket/nvhdmipkt_C871.c',
	'../common/modeset/hdmipacket/nvhdmipkt_C971.c',
	'../common/modeset/hdmipacket/nvhdmipkt_CA71.c',
	'../common/modeset/timing/nvt_cvt.c',
	'../common/modeset/timing/nvt_displayid20.c',
	'../common/modeset/timing/nvt_dmt.c',
	'../common/modeset/timing/nvt_dsc_pps.c',
	'../common/modeset/timing/nvt_edid.c',
	'../common/modeset/timing/nvt_edidext_861.c',
	'../common/modeset/timing/nvt_edidext_displayid.c',
	'../common/modeset/timing/nvt_edidext_displayid20.c',
	'../common/modeset/timing/nvt_gtf.c',
	'../common/modeset/timing/nvt_ovt.c',
	'../common/modeset/timing/nvt_tv.c',
	'../common/modeset/timing/nvt_util.c',
	'../common/unix/common/utils/nv_memory_tracker.c',
	'../common/unix/common/utils/nv_mode_timings_utils.c',
	'../common/unix/common/utils/nv_vasprintf.c',
	'../common/unix/common/utils/unix_rm_handle.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-core.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-fermi.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-hopper.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-init.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-kepler.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-maxwell.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-pascal.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-surface.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-turing.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-vertex-arrays.c',
	'../common/unix/nvidia-3d/src/nvidia-3d-volta.c',
	'../common/unix/nvidia-push/src/nvidia-push-init.c',
	'../common/unix/nvidia-push/src/nvidia-push.c',
	'kapi/src/nvkms-kapi-notifiers.c',
	'kapi/src/nvkms-kapi-sync.c',
	'kapi/src/nvkms-kapi.c',
	'lib/nvkms-format.c',
	'lib/nvkms-sync.c',
	'src/dp/nvdp-connector-event-sink.cpp',
	'src/dp/nvdp-connector.cpp',
	'src/dp/nvdp-device.cpp',
	'src/dp/nvdp-evo-interface.cpp',
	'src/dp/nvdp-host.cpp',
	'src/dp/nvdp-timer.cpp',
	'src/g_nvkms-evo-states.c',
	'src/nvkms-3dvision.c',
	'src/nvkms-attributes.c',
	'src/nvkms-conf.c',
	'src/nvkms-console-restore.c',
	'src/nvkms-ctxdma.c',
	'src/nvkms-cursor.c',
	'src/nvkms-cursor2.c',
	'src/nvkms-cursor3.c',
	'src/nvkms-difr.c',
	'src/nvkms-dma.c',
	'src/nvkms-dpy-override.c',
	'src/nvkms-dpy.c',
	'src/nvkms-event.c',
	'src/nvkms-evo.c',
	'src/nvkms-evo1.c',
	'src/nvkms-evo2.c',
	'src/nvkms-evo3.c',
	'src/nvkms-evo4.c',
	'src/nvkms-flip.c',
	'src/nvkms-framelock.c',
	'src/nvkms-hal.c',
	'src/nvkms-hdmi.c',
	'src/nvkms-headsurface-3d.c',
	'src/nvkms-headsurface-config.c',
	'src/nvkms-headsurface-ioctl.c',
	'src/nvkms-headsurface-matrix.c',
	'src/nvkms-headsurface-swapgroup.c',
	'src/nvkms-headsurface.c',
	'src/nvkms-hw-flip.c',
	'src/nvkms-hw-states.c',
	'src/nvkms-lut.c',
	'src/nvkms-modepool.c',
	'src/nvkms-modeset.c',
	'src/nvkms-pow.c',
	'src/nvkms-prealloc.c',
	'src/nvkms-push.c',
	'src/nvkms-rm.c',
	'src/nvkms-rmapi-dgpu.c',
	'src/nvkms-stereo.c',
	'src/nvkms-surface.c',
	'src/nvkms-utils-flip.c',
	'src/nvkms-utils.c',
	'src/nvkms-vblank-sem-control.c',
	'src/nvkms-vrr.c',
	'src/nvkms.c',
	'../common/unix/xzminidec/src/xz_crc32.c',
	'../common/unix/xzminidec/src/xz_dec_bcj.c',
	'../common/unix/xzminidec/src/xz_dec_lzma2.c',
	'../common/unix/xzminidec/src/xz_dec_stream.c',
)

public_headers = [
	'../common/modeset',
	'include',
	'interface',
	'kapi/include',
	'kapi/interface',
	'os-interface/include',
]

modeset_inc = include_directories(
	'../common/displayport/inc',
	'../common/displayport/inc/dptestutil',
	'../common/inc/displayport',
	'../common/unix/nvidia-3d/include',
	'../common/unix/nvidia-3d/interface',
	'../common/unix/nvidia-headsurface',
	'../common/unix/nvidia-push/include',
	'../common/unix/nvidia-push/interface',
	'../common/unix/xzminidec/interface',
	'../nvidia/arch/nvalloc/unix/include',
	'src/shaders',
)

defines = [
	'-DNV_LINUX',
	'-DNV_X86_64',
	'-DNV_ARCH_BITS=64',
	'-include', '../common/sdk/nvidia/inc/cpuopsys.h',
	'-D_LANGUAGE_C',
	'-D__NO_CTYPE',
	'-DNVRM',
	'-DLOCK_VAL_ENABLED=0',
	'-DPORT_ATOMIC_64_BIT_SUPPORTED=1',
	'-DPORT_IS_KERNEL_BUILD=1',
	'-DPORT_IS_CHECKED_BUILD=1',
	'-DPORT_MODULE_atomic=1',
	'-DPORT_MODULE_core=1',
	'-DPORT_MODULE_cpu=1',
	'-DPORT_MODULE_crypto=1',
	'-DPORT_MODULE_debug=1',
	'-DPORT_MODULE_memory=1',
	'-DPORT_MODULE_safe=1',
	'-DPORT_MODULE_string=1',
	'-DPORT_MODULE_sync=1',
	'-DPORT_MODULE_thread=1',
	'-DPORT_MODULE_util=1',
	'-DPORT_MODULE_example=0',
	'-DPORT_MODULE_mmio=0',
	'-DPORT_MODULE_time=0',
	'-DRS_STANDALONE=0',
	'-DRS_STANDALONE_TEST=0',
	'-DRS_COMPATABILITY_MODE=1',
	'-DRS_PROVIDES_API_STATE=0',
	'-DNV_CONTAINERS_NO_TEMPLATES',
	'-DINCLUDE_NVLINK_LIB',
	'-DINCLUDE_NVSWITCH_LIB',
	'-DNV_PRINTF_STRINGS_ALLOWED=1',
	'-DNV_ASSERT_FAILED_USES_STRINGS=1',
	'-DPORT_ASSERT_FAILED_USES_STRINGS=1',
	'-DLIBSPDM_CONFIG="nvspdm_rmconfig.h"',
	'-DSOFTFLOAT_ROUND_ODD',
	'-DSOFTFLOAT_FAST_DIV32TO16',
	'-DSOFTFLOAT_FAST_DIV64TO32',
	'-DNV_CPU_INTRINSICS_KERNEL',
	'-DNVHDMIPKT_RM_CALLS_INTERNAL=0',
	'-DNVT_USE_NVKMS',
	'-DNV_SMG_IN_NVKMS',
	'-DNV_PUSH_IN_KERNEL',
	'-DNV_XZ_CUSTOM_MEM_HOOKS',
	'-DNV_XZ_USE_NVTYPES',
	'-DXZ_DEC_SINGLE',
	'-DNVT_USE_NVKMS',
	'-DDEBUG',
]

modeset_c_flags = defines + [
	'-ffreestanding',
	'-mno-mmx',
	'-mno-sse',
	'-mno-sse2',
	'-mno-3dnow',
	'-Wno-unused-parameter',
	'-Wno-unused-but-set-variable',
	'-Wno-missing-field-initializers',
	'-fno-strict-aliasing',
	'-fno-omit-frame-pointer',
	'-Wformat=2',
	'-Wno-sign-compare',
	'-Wno-format-zero-length',
]

modeset_cpp_flags = modeset_c_flags + [
	'-fno-operator-names',
	'-fno-rtti',
	'-fno-exceptions',
	'-fcheck-new',
	'-Wno-overloaded-virtual',
]

modeset_c_flags += ['-Wno-duplicate-decl-specifier']

if not get_option('deps_only')
	subdir('src/shaders')

	libnvidia_modeset = static_library('nvidia-open-modeset',
		[modeset_src, embedded_shaders],
		include_directories: [src_inc, modeset_inc, public_headers],
		c_args: modeset_c_flags,
		cpp_args: modeset_cpp_flags,
		pic: false,
		install: true)

	pc_subdirs = ['nvidia-open-modeset']

	foreach subdir : public_headers
		normalized_subdir = subdir
		if subdir.startswith('../')
			normalized_subdir = normalized_subdir.substring(3)
		endif
		normalized_subdir = 'nvidia-open-modeset' / normalized_subdir

		install_subdir(subdir, install_dir: get_option('includedir') / normalized_subdir, strip_directory: true)

		pc_subdirs += normalized_subdir
	endforeach

	pkg.generate(libnvidia_modeset, subdirs: pc_subdirs)
endif
