nvidia_generated_src = files(
	'generated/g_access_cntr_buffer_nvoc.c',
	'generated/g_all_dcl_pb.c',
	'generated/g_binary_api_nvoc.c',
	'generated/g_bindata.c',
	'generated/g_ccsl_nvoc.c',
	'generated/g_ce_utils_nvoc.c',
	'generated/g_channel_descendant_nvoc.c',
	'generated/g_chips2halspec_nvoc.c',
	'generated/g_chipset_nvoc.c',
	'generated/g_client_nvoc.c',
	'generated/g_client_resource_nvoc.c',
	'generated/g_code_coverage_mgr_nvoc.c',
	'generated/g_compute_instance_subscription_nvoc.c',
	'generated/g_conf_compute_api_nvoc.c',
	'generated/g_conf_compute_nvoc.c',
	'generated/g_console_mem_nvoc.c',
	'generated/g_context_dma_nvoc.c',
	'generated/g_crashcat_engine_nvoc.c',
	'generated/g_crashcat_pb.c',
	'generated/g_crashcat_queue_nvoc.c',
	'generated/g_crashcat_report_nvoc.c',
	'generated/g_crashcat_wayfinder_nvoc.c',
	'generated/g_dbgbuffer_nvoc.c',
	'generated/g_deferred_api_nvoc.c',
	'generated/g_device_nvoc.c',
	'generated/g_disp_capabilities_nvoc.c',
	'generated/g_disp_channel_nvoc.c',
	'generated/g_disp_inst_mem_nvoc.c',
	'generated/g_disp_objs_nvoc.c',
	'generated/g_disp_sf_user_nvoc.c',
	'generated/g_dispsw_nvoc.c',
	'generated/g_egm_mem_nvoc.c',
	'generated/g_eng_state_nvoc.c',
	'generated/g_engines_pb.c',
	'generated/g_event_buffer_nvoc.c',
	'generated/g_event_nvoc.c',
	'generated/g_fabric_nvoc.c',
	'generated/g_fabric_vaspace_nvoc.c',
	'generated/g_fbsr_nvoc.c',
	'generated/g_fla_mem_nvoc.c',
	'generated/g_fm_session_api_nvoc.c',
	'generated/g_generic_engine_nvoc.c',
	'generated/g_gpu_access_nvoc.c',
	'generated/g_gpu_acct_nvoc.c',
	'generated/g_gpu_boost_mgr_nvoc.c',
	'generated/g_gpu_class_list.c',
	'generated/g_gpu_db_nvoc.c',
	'generated/g_gpu_group_nvoc.c',
	'generated/g_gpu_halspec_nvoc.c',
	'generated/g_gpu_instance_subscription_nvoc.c',
	'generated/g_gpu_mgmt_api_nvoc.c',
	'generated/g_gpu_mgr_nvoc.c',
	'generated/g_gpu_nvoc.c',
	'generated/g_gpu_resource_nvoc.c',
	'generated/g_gpu_user_shared_data_nvoc.c',
	'generated/g_gpu_vaspace_nvoc.c',
	'generated/g_gr_pb.c',
	'generated/g_gsp_pb.c',
	'generated/g_gsync_api_nvoc.c',
	'generated/g_gsync_nvoc.c',
	'generated/g_hal_mgr_nvoc.c',
	'generated/g_hal_nvoc.c',
	'generated/g_hda_codec_api_nvoc.c',
	'generated/g_heap_nvoc.c',
	'generated/g_host_eng_nvoc.c',
	'generated/g_hw_resources_nvoc.c',
	'generated/g_hypervisor_nvoc.c',
	'generated/g_i2c_api_nvoc.c',
	'generated/g_imex_session_api_nvoc.c',
	'generated/g_intr_nvoc.c',
	'generated/g_intr_service_nvoc.c',
	'generated/g_io_vaspace_nvoc.c',
	'generated/g_ioaccess_nvoc.c',
	'generated/g_journal_nvoc.c',
	'generated/g_journal_pb.c',
	'generated/g_kern_bus_nvoc.c',
	'generated/g_kern_disp_nvoc.c',
	'generated/g_kern_fsp_nvoc.c',
	'generated/g_kern_gmmu_nvoc.c',
	'generated/g_kern_hwpm_common_defs_nvoc.c',
	'generated/g_kern_hwpm_nvoc.c',
	'generated/g_kern_hwpm_power_nvoc.c',
	'generated/g_kern_mem_sys_nvoc.c',
	'generated/g_kern_perf_nvoc.c',
	'generated/g_kern_perfbuffer_nvoc.c',
	'generated/g_kern_pmu_nvoc.c',
	'generated/g_kernel_bif_nvoc.c',
	'generated/g_kernel_ccu_api_nvoc.c',
	'generated/g_kernel_ccu_nvoc.c',
	'generated/g_kernel_ce_context_nvoc.c',
	'generated/g_kernel_ce_nvoc.c',
	'generated/g_kernel_channel_group_api_nvoc.c',
	'generated/g_kernel_channel_group_nvoc.c',
	'generated/g_kernel_channel_nvoc.c',
	'generated/g_kernel_crashcat_engine_nvoc.c',
	'generated/g_kernel_ctxshare_nvoc.c',
	'generated/g_kernel_falcon_nvoc.c',
	'generated/g_kernel_fifo_nvoc.c',
	'generated/g_kernel_graphics_context_nvoc.c',
	'generated/g_kernel_graphics_manager_nvoc.c',
	'generated/g_kernel_graphics_nvoc.c',
	'generated/g_kernel_graphics_object_nvoc.c',
	'generated/g_kernel_gsp_nvoc.c',
	'generated/g_kernel_gsplite_nvoc.c',
	'generated/g_kernel_head_nvoc.c',
	'generated/g_kernel_hostvgpudeviceapi_nvoc.c',
	'generated/g_kernel_ioctrl_nvoc.c',
	'generated/g_kernel_mc_nvoc.c',
	'generated/g_kernel_mig_manager_nvoc.c',
	'generated/g_kernel_nvdec_ctx_nvoc.c',
	'generated/g_kernel_nvenc_ctx_nvoc.c',
	'generated/g_kernel_nvjpg_ctx_nvoc.c',
	'generated/g_kernel_nvlink_nvoc.c',
	'generated/g_kernel_ofa_ctx_nvoc.c',
	'generated/g_kernel_rc_nvoc.c',
	'generated/g_kernel_sec2_nvoc.c',
	'generated/g_kernel_sm_debugger_session_nvoc.c',
	'generated/g_kernel_vgpu_mgr_nvoc.c',
	'generated/g_kernel_video_engine_nvoc.c',
	'generated/g_lock_stress_nvoc.c',
	'generated/g_lock_test_nvoc.c',
	'generated/g_mem_export_nvoc.c',
	'generated/g_mem_fabric_import_ref_nvoc.c',
	'generated/g_mem_fabric_import_v2_nvoc.c',
	'generated/g_mem_fabric_nvoc.c',
	'generated/g_mem_list_nvoc.c',
	'generated/g_mem_mapper_nvoc.c',
	'generated/g_mem_mgr_nvoc.c',
	'generated/g_mem_multicast_fabric_nvoc.c',
	'generated/g_mem_nvoc.c',
	'generated/g_mig_config_session_nvoc.c',
	'generated/g_mig_monitor_session_nvoc.c',
	'generated/g_mmu_fault_buffer_nvoc.c',
	'generated/g_mps_api_nvoc.c',
	'generated/g_no_device_mem_nvoc.c',
	'generated/g_nv_debug_dump_nvoc.c',
	'generated/g_nvdebug_pb.c',
	'generated/g_nvencsession_nvoc.c',
	'generated/g_nvfbc_session_nvoc.c',
	'generated/g_object_nvoc.c',
	'generated/g_objsweng_nvoc.c',
	'generated/g_objtmr_nvoc.c',
	'generated/g_os_desc_mem_nvoc.c',
	'generated/g_os_nvoc.c',
	'generated/g_p2p_api_nvoc.c',
	'generated/g_phys_mem_nvoc.c',
	'generated/g_platform_nvoc.c',
	'generated/g_platform_request_handler_nvoc.c',
	'generated/g_prereq_tracker_nvoc.c',
	'generated/g_profiler_v1_nvoc.c',
	'generated/g_profiler_v2_nvoc.c',
	'generated/g_rc_pb.c',
	'generated/g_ref_count_nvoc.c',
	'generated/g_reg_mem_nvoc.c',
	'generated/g_regs_pb.c',
	'generated/g_resource_nvoc.c',
	'generated/g_rg_line_callback_nvoc.c',
	'generated/g_rmconfig_util.c',
	'generated/g_rpc_iom.c',
	'generated/g_rpcstructurecopy_iom.c',
	'generated/g_rs_client_nvoc.c',
	'generated/g_rs_resource_nvoc.c',
	'generated/g_rs_server_nvoc.c',
	'generated/g_sec2_context_nvoc.c',
	'generated/g_sec2_utils_nvoc.c',
	'generated/g_sem_surf_nvoc.c',
	'generated/g_spdm_nvoc.c',
	'generated/g_spdm_proxy_nvoc.c',
	'generated/g_standard_mem_nvoc.c',
	'generated/g_subdevice_diag_nvoc.c',
	'generated/g_subdevice_nvoc.c',
	'generated/g_sw_test_nvoc.c',
	'generated/g_swintr_nvoc.c',
	'generated/g_syncgpuboost_nvoc.c',
	'generated/g_syncpoint_mem_nvoc.c',
	'generated/g_system_mem_nvoc.c',
	'generated/g_system_nvoc.c',
	'generated/g_third_party_p2p_nvoc.c',
	'generated/g_timed_sema_nvoc.c',
	'generated/g_tmr_nvoc.c',
	'generated/g_traceable_nvoc.c',
	'generated/g_usermode_api_nvoc.c',
	'generated/g_uvm_channel_retainer_nvoc.c',
	'generated/g_uvm_nvoc.c',
	'generated/g_uvm_sw_nvoc.c',
	'generated/g_vaspace_api_nvoc.c',
	'generated/g_vaspace_nvoc.c',
	'generated/g_vblank_callback_nvoc.c',
	'generated/g_vgpuapi_nvoc.c',
	'generated/g_vgpuconfigapi_nvoc.c',
	'generated/g_video_mem_nvoc.c',
	'generated/g_vidmem_access_bit_buffer_nvoc.c',
	'generated/g_virt_mem_allocator_nvoc.c',
	'generated/g_virt_mem_mgr_nvoc.c',
	'generated/g_virt_mem_range_nvoc.c',
	'generated/g_virtual_mem_nvoc.c',
	'generated/g_zbc_api_nvoc.c',
)

public_headers = [
	'../common/inc',
	'../common/nvlink/interface',
	'../common/sdk/nvidia/inc',
	'../common/unix/common/inc',
	'../common/unix/common/utils/interface',
	'../common/unix/nvidia-push/interface',
	'arch/nvalloc/common/inc',
	'arch/nvalloc/common/inc/gsp',
	'arch/nvalloc/unix/include',
	'inc/kernel',
	'interface',
	'src/libraries/libspdm/3.1.1/include',
	'src/libraries/libspdm/3.1.1/include/hal',
]

inc = include_directories(
	'generated',
	'inc',
	'inc/libraries',
	'inc/os',
	'kernel/inc',
	'src/libraries',
	'src/libraries/libspdm/3.1.1/os_stub',
	'src/libraries/libspdm/3.1.1/os_stub/include',
	'src/libraries/libspdm/nvidia',
)

defines = [
	'-DNV_LINUX',
	'-DNV_X86_64',
	'-DNV_ARCH_BITS=64',
	'-include', '../common/sdk/nvidia/inc/cpuopsys.h',
	'-D_LANGUAGE_C',
	'-D__NO_CTYPE',
	'-DNVRM',
	'-DLOCK_VAL_ENABLED=0',
	'-DPORT_ATOMIC_64_BIT_SUPPORTED=1',
	'-DPORT_IS_KERNEL_BUILD=1',
	'-DPORT_IS_CHECKED_BUILD=1',
	'-DPORT_MODULE_atomic=1',
	'-DPORT_MODULE_core=1',
	'-DPORT_MODULE_cpu=1',
	'-DPORT_MODULE_crypto=1',
	'-DPORT_MODULE_debug=1',
	'-DPORT_MODULE_memory=1',
	'-DPORT_MODULE_safe=1',
	'-DPORT_MODULE_string=1',
	'-DPORT_MODULE_sync=1',
	'-DPORT_MODULE_thread=1',
	'-DPORT_MODULE_util=1',
	'-DPORT_MODULE_example=0',
	'-DPORT_MODULE_mmio=0',
	'-DPORT_MODULE_time=0',
	'-DRS_STANDALONE=0',
	'-DRS_STANDALONE_TEST=0',
	'-DRS_COMPATABILITY_MODE=1',
	'-DRS_PROVIDES_API_STATE=0',
	'-DNV_CONTAINERS_NO_TEMPLATES',
	'-DINCLUDE_NVLINK_LIB',
	'-DINCLUDE_NVSWITCH_LIB',
	'-DNV_PRINTF_STRINGS_ALLOWED=1',
	'-DNV_ASSERT_FAILED_USES_STRINGS=1',
	'-DPORT_ASSERT_FAILED_USES_STRINGS=1',
	'-DLIBSPDM_CONFIG="nvspdm_rmconfig.h"',
	'-DDEBUG',
]

c_flags = defines + [
	'-ffreestanding',
	'-mno-mmx',
	'-mno-sse',
	'-mno-sse2',
	'-mno-3dnow',
	'-Wno-unused-parameter',
	'-Wno-unused-but-set-variable',
	'-Wno-missing-field-initializers',
	'-Wno-sign-compare',
	'-Wno-initializer-overrides',
	'-Wno-enum-conversion',
	'-Wno-unused-variable',
	'-Wno-non-literal-null-conversion',
	'-Wno-cast-function-type-mismatch',
	'-Wno-ignored-qualifiers',
	'-Wno-unused-but-set-parameter',
]

if not get_option('deps_only')
	libnvidia = static_library('nvidia-open',
		[
			nvidia_generated_src, nvidia_common_src, nvidia_libraries_src, nvidia_kernel_src,
			nvidia_nvalloc_src, nvidia_interface_src
		],
		include_directories: [src_inc, inc, public_headers],
		c_args: c_flags,
		pic: false,
		install: true)

	pc_subdirs = ['nvidia-open']

	foreach subdir : public_headers
		normalized_subdir = subdir
		if subdir.startswith('../')
			normalized_subdir = normalized_subdir.substring(3)
		endif
		normalized_subdir = 'nvidia-open' / normalized_subdir

		install_subdir(subdir, install_dir: get_option('includedir') / normalized_subdir, strip_directory: true)

		pc_subdirs += normalized_subdir
	endforeach

	pkg.generate(libnvidia, subdirs: pc_subdirs, extra_cflags: [
		'-DNVRM',
		'-DDEBUG',
		'-DNV_VERSION_STRING=\'"@0@"\''.format(meson.project_version()),
		'-DNV_KERNEL_INTERFACE_LAYER',
	])
endif
